# HandPoseDetect

./: CMakeLists.txt  README.md  testTF_MINI.py
include/: ColorBased_Seger.h
src/: CMakeLists.txt  CollectSample.cpp  ColorBased_Seger.cpp  get_Distance_TFmini_Plus.py  runDemo_Color.cpp  runDemo_Color_WithMindVersionCamera.cpp  testBoost.cpp  testBoost_Serial.cpp  test_MindVersionSDK.cpp  test_TFmini_CPP_Python.cpp
